<resources>
    <string name="app_name">E-commerce</string>

    <!--    auth-->
    <string name="txt_login_uppercase">LOGIN</string>
    <string name="txt_login_no_space">Login</string>
    <string name="txt_login">Log in</string>
    <string name="txt_content_splash">Explore the new world of clothing</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login_with_social_account">Or login with social account</string>
    <string name="feature_is_developing">Feature is developing</string>

    <!--    bottom navigation-->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_shop">Shop</string>
    <string name="bottom_nav_cart">Bag</string>
    <string name="bottom_nav_favorite">Favorites</string>
    <string name="bottom_nav_profile">Profile</string>
    
    <!--    home screen-->
    <string name="fashion_sale">Fashion \nsale</string>
    <string name="check">Check</string>
    <string name="view_all">View all</string>


    <!--    shop screen-->
    <string name="categories">Categories</string>
    <string name="filter">Filters</string>
    <string name="sort_by">Sort by</string>

    <string name="price_discount">-%s</string>

    <string name="order_detail">Order Details</string>
    <string name="have_account">Not a member yet? Register</string>

    <string name="purchase_complete">Purchase complete🎉</string>

    <string name="explain_text">"Please let us know your \nfeedback ,the shop sincerely appreciates it.</string>
</resources>