<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/bottom_nav_home"
        android:icon="@drawable/ic_home_bottom_bar"/>

    <item
        android:id="@+id/shopFragment"
        android:title="@string/bottom_nav_shop"
        android:icon="@drawable/ic_shop_bottom_bar"/>

    <item
        android:id="@+id/cartFragment"
        android:title="@string/bottom_nav_cart"
        android:icon="@drawable/ic_cart_bottom_bar"/>

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/bottom_nav_favorite"
        android:icon="@drawable/ic_favorite_bottom_bar"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/bottom_nav_profile"
        android:icon="@drawable/ic_profile_bottom_bar"/>
</menu>