<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.example.fashionapp.data.ui.auth.login.LoginViewmodel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app_color">

        <com.example.fashionapp.component.ToolbarCustom
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/common_size_18dp"
            android:text="@string/txt_login_no_space"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_auth_big"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_input_info"
            android:paddingVertical="5dp"
            app:boxBackgroundMode="none"
            app:layout_constraintTop_toBottomOf="@id/tv_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(view)->viewmodel.validate()}"
                android:background="@android:color/transparent"
                android:hint="@string/txt_username"
                android:maxLines="1"
                android:inputType="text"
                android:text="@={viewmodel.usernmae}"
                android:textColorHint="@color/background_app_color"
                android:textSize="@dimen/text_size_14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/commin_size_16dp"
            android:background="@drawable/bg_input_info"
            android:paddingVertical="5dp"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/til_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:afterTextChanged="@{(view)->viewmodel.validate()}"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewmodel.password}"
                android:textColorHint="@color/background_app_color"
                android:textSize="@dimen/text_size_14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/common_size_7dp"
                android:src="@drawable/ic_left_red_arrow" />
        </LinearLayout>

        <TextView
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/primary_height_button"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/common_size_32dp"
            android:background="@drawable/bg_btn_primary_enable"
            android:enabled="@{viewmodel.enableButton}"
            android:gravity="center"
            android:text="@string/txt_login_uppercase"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            android:onClick="@{(view)->viewmodel.loginClick()}"
            app:layout_constraintTop_toBottomOf="@id/ll_forgot_pass" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not a member yet? Register"
            app:layout_constraintTop_toBottomOf="@id/bt_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/text_size_14sp"
            android:onClick="@{()->viewmodel.goToRegister()}"
            android:textColor="@color/grey_9B9B9B"
            android:layout_marginTop="@dimen/commin_size_10dp"/>

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_size_12dp"
            android:gravity="center"
            android:text="@string/login_with_social_account"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toTopOf="@+id/ll_login_via_social" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_login_via_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <FrameLayout
                android:id="@+id/fl_gg"
                android:layout_width="92dp"
                android:layout_height="64dp"
                android:background="@drawable/bg_icon_social_media">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo_gg" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_fb"
                android:layout_width="92dp"
                android:layout_height="64dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:background="@drawable/bg_icon_social_media">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo_fb" />
            </FrameLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>